--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,9 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto">
                                 <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="https://github.com/wikigods/highlightjs-clipboard-toastr">GitHub</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="./index.html">Bootstrap Icons</a>
                                 </li>
                                 <li class="nav-item">
