--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </div>
 
         <script src="./dist/example.js"></script>
+        <script src="./dist/hl-clip-toast.js"></script>
         <script>
             hct.fire();
         </script>
