--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Ejemplo Highlight + Clipboard</title>
-        <link href="./dist/example.min.css" rel="stylesheet">
+        <link href="./dist/css/example.css" rel="stylesheet">
         <link href="./plugins/toastr.min.css" rel="stylesheet">
         <link href="./plugins/atom-one-dark.css" rel="stylesheet">
         <link href="./plugins/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet">
@@ -60,8 +60,8 @@
             </footer>
         </div>
 
-        <script src="./dist/example.js"></script>
-        <script src="./dist/hl-clip-toast.js"></script>
+        <script src="./dist/js/example.min.js"></script>
+        <script src="./dist/js/hl-clip-toast.min.js"></script>
         <script>
             hct.fire();
         </script>
