--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Ejemplo Highlight + Clipboard</title>
-        <link href="./dist/example.min.css" rel="stylesheet">
+        <link href="./dist/css/example.css" rel="stylesheet">
         <link href="./plugins/toastr.min.css" rel="stylesheet">
         <link href="./plugins/codepen-embed.css" rel="stylesheet">
         <link href="./plugins/fontawesome-free/css/all.css" rel="stylesheet">
@@ -62,7 +62,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-        <script src="./dist/hl-clip-toast.js"></script>
+        <script src="./dist/js/hl-clip-toast.js"></script>
         <script>
             hct.fire({
                 iconDefault: 'fa-solid fa-clipboard',
