--- a/index.html
+++ b/index.html
@@ -63,13 +63,10 @@
         <script src="./dist/js/example.min.js"></script>
         <script src="./dist/js/hl-clip-toast.min.js"></script>
         <script>
-            // Ahora `HCT` estará disponible globalmente como una clase
+
             const coreInstance = new HCT({});
-            coreInstance.greet();  // Esto debería funcionar correctamente
+            coreInstance.info();
             coreInstance.fire();
-        </script>
-        <script>
-            // hct.fire();
         </script>
     </body>
 </html>
